k8s/namespaces/base/openfaas/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openfaas
  labels:
    role: openfaas-system
    access: openfaas-system
    namespace: openfaas
    kustomize.toolkit.fluxcd.io/prune: disabled
